# openmp

./: .gitignore  CMakeLists.txt  README.md
test/: CMakeLists.txt  test.cpp
